--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
       <h1>happy birthday!</h1>
       <p class="name">AFFU</p>
       <h1>I just wanna say you will be always my valentine 
-      Watching how much you do for your family makes me respect you even more😂. and I would be happier if you could love me a little (Ittkhuni) </div>
+      Watching how much you do for your family makes me respect you even more😂. and I would be happier if you could love me a little (Ittukhuni) </div>
+      <h1> Love you a lotttttttt</h1>
   </body>
 </html>
