--- a/index.html
+++ b/index.html
@@ -284,9 +284,8 @@
       </svg>
       <div class="text">
       <h1>happy birthday!</h1>
-      <p class="name">AFFU</p>
-      <h1>I just wanna say you will be always my valentine 
-      Watching how much you do for your family makes me respect you even more😂. and I would be happier if you could love me a little (Ittukhuni) </div>
+      <p class="name">BIRTHDAY MOBARAK EMON KHAN </p> h1 <div> MOTHER :- ROSHIDA BIBI </div> 
+      <h1 </div>
       <h1> Love you a lotttttttt<p
                                   </h1>
   </body>
