--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
         <rect x="10" y="475.571" fill="#fefae9" width="180" height="4" />
       </svg>
       <div class="text">
-      <h1>happy birthday!</h1>
-      <p class="name">BIRTHDAY MOBARAK EMON KHAN </p> h1 <div> MOTHER :- ROSHIDA BIBI </div> 
+      <h1>happy birthday!</>
+      <p class="name">BIRTHDAY MOBARAK EMON KHAN </p> h1 <div> MOTHER :- ROSHIDA BIBI </div>FATHER:- MOFAJJEL KHAN</div>VILLAGE:- PADMAPUKKUR , PS:- DEGANGA, DIS:- NORTH 24 PGS</div>
       <h1 </div>
       <h1> Love you a lotttttttt<p
                                   </h1>
