--- a/index.html
+++ b/index.html
@@ -284,7 +284,8 @@
       </svg>
       <div class="text">
       <h1>happy birthday!</>
-      <p class="name">BIRTHDAY MOBARAK EMON KHAN </p>  <div> MOTHER :- ROSHIDA BIBI </div>FATHER:- MOFAJJEL KHAN</div> </div> VILLAGE:- PADMAPUKKUR , PS:- DEGANGA, DIS:- NORTH 24 PGS </div> </div>
+      <p class="name">BIRTHDAY MOBARAK EMON KHAN </p>  <div> MOTHER :- ROSHIDA BIBI </div>FATHER:- MOFAJJEL KHAN</div> 
+      <P </div> VILLAGE:- PADMAPUKKUR , PS:- DEGANGA, DIS:- NORTH 24 PGS </div> </div>
       <h1 </div>
       <h1> Love you a lotttttttt<p
                                   </h1>
