--- a/index.html
+++ b/index.html
@@ -288,3 +288,12 @@
       <P </div> VILLAGE:- PADMAPUKKUR , PS:- DEGANGA, DIS:- NORTH 24 PGS </div> </div>
   </body>
 </html>
+<div style="background-image:abccd,JPG; background-size: cover; padding: 30px; color: white;">
+  <pre>
+<code>
+&lt;div&gt;
+  Hello, world!
+&lt;/div&gt;
+</code>
+  </pre>
+</div>
