--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head> <img src="Leonardo_Lightning_XL_Monkey_walking_after_swimming_in_river_0.jpg" alt="100
+    %">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cake</title>
@@ -116,7 +118,7 @@
 
       .text {
         color: #8b6a60;
-        font-family: 'Lato', sans-serif;
+        font-family: 'lato', sans-serif;
         font-weight: 300;
         font-style:italic;
         text-align: center;
@@ -283,17 +285,14 @@
         <rect x="10" y="475.571" fill="#fefae9" width="180" height="4" />
       </svg>
       <div class="text">
-      <h1>happy birthday!</>
-      <p class="name">BIRTHDAY MOBARAK EMON KHAN </p>  <div> MOTHER :- ROSHIDA BIBI </div>FATHER:- MOFAJJEL KHAN</div> 
-      <P </div> VILLAGE:- PADMAPUKKUR , PS:- DEGANGA, DIS:- NORTH 24 PGS </div> </div>
-  </body>
-</html>
-<div style="background-image:abccd,JPG; background-size: cover; padding: 30px; color: white;">
-  <pre>
-<code>
-&lt;div&gt;
-  Hello, world!
-&lt;/div&gt;
-</code>
-  </pre>
+      <h1>BIRHDAY MOBARAk !</h1>
+      <p class="name">EMON      KHAN</p> 
+      <h1>Landing Date 17/5/2010</h1>
+      <h1> (You are now a 15 year old Cow)</h1>
+      <h1>Mother:-Roshida Bibi,  Father:- Mofarjjel Khan, 
+Village:- Padmapukur, PS :- Deganga, Dist:- Noth 24 pgs, PIN:- 743423
+<h2>Just One Request be a good person Always❤️  </h2>
+<div id="balloon-container"></div>
+<div style="text-align: center; margin: 20px 0;">
+  <img src="C:\Users\bo172\OneDrive\Desktop\WhatsApp Image 2025-05-16 at 21.25.39_0ff85ab4.jpg" alt="C:\Users\bo172\OneDrive\Desktop\WhatsApp Image 2025-05-16 at 21.25.39_0ff85ab4.jpg" style="max-width: 10%; height: auto; border-radius: 10px;">
 </div>
